<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Temperature Converter</string>
    <string name="action_settings">Settings</string>
	<string name="label_temperature_range_min">0F</string>
	<string name="label_temperature_range_max">200F</string>
	<string name="label_temperature_fahrenheit">Fahrenheit:</string>
	<string name="label_temperature_celsius">Celsius:</string>
	<string name="text_temperature_fahrenheit">0.00</string>
	<string name="text_temperature_celsius">-17.78</string>
	<string name="label_status_message">Too Cold!</string>
</resources>
